fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
-* {
-    font-family: 'Roboto', sans-serif;
-}
 
-main {
-    min-height: 90vh;
-    max-width: 1280px;
-    margin: auto;
-    padding: 15px;
-}
+:root{
+    --box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    list-style: none;
+  }
+  
+  .App{
+    min-height: 100vh;
+  }
+  
+  .light{
+    background-color: #e2e8f0;
+  }
+  
+  .dark{
+    background-color: #0f172a;
+  }
